--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 .navbar {
     animation: scroll 70s linear infinite;
-    background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80"), #111111;
+    background: url("images/whiteWall.jpg") #111111;
     color: #FFFFFF;
     display: flex;
     justify-content: center;
@@ -28,9 +28,6 @@ body {
     perspective: 1000px;
     perspective-origin: 50% 50%;
     text-shadow: 0px 0px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  
 }
 
 @keyframes scroll {
