--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ body {
     perspective: 1000px;
     perspective-origin: 50% 50%;
     text-shadow: 0px 0px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 @keyframes scroll {
