--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 @charset "utf-8";
+@import url("webfonts/Pilsner_Bold/stylesheet.css");
+
 .container-fluid {
     background-image: url(url);
 }
 .container-fluid {
     /* [disabled]background-color: #000000; */
 }
+
 
 body p {
 }
@@ -30,7 +33,28 @@ body {
     text-shadow: 0px 0px;
     margin-top: 10px;
     margin-bottom: 10px;
+    max-width: none;
+    height: 80px;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 400;
 }
+.container-fluid .navbar.navbar-expand-lg.navbar-light.bg-light {
+    font-size: xx-large;
+    font-style: normal;
+    font-weight: 400;
+}
+
+.navbar-brand {
+    font-family: "Pilsner Bold";
+    font-variant: small-caps;
+    background-color: #FFFFFF;
+    font-size: 35px;
+}
+.container-fluid .navbar.navbar-expand-lg.navbar-light.bg-light .navbar-brand {
+}
+
+
 
 @keyframes scroll {
    100%{
