--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 @import url("webfonts/Pilsner_Bold/stylesheet.css");
 @import url("webfonts/ST_Postoronnim/stylesheet.css");
 @import url("webfonts/ST_Tablichka/stylesheet.css");
+@import url("webfonts/PTMono_Regular/stylesheet.css");
+@import url("webfonts/AnonymousPro_Regular/stylesheet.css");
 
 
 
@@ -104,7 +106,41 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance:none;
-}s
+}
+
+.site-footer {
+    margin-top: 1%;
+    display: flex;
+    height: 5vh;
+    width: 100%;
+    background-color: #002a38;
+    line-height: 1.3;
+    font-family: "AnonymousPro Regular";
+}
+
+ul {
+  display: inline-grid;
+  grid-auto-flow: row;
+  grid-gap: 24px;
+  justify-items: center;
+  margin: auto;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+}
+
+@media (min-width: 500px) {
+  ul {
+    grid-auto-flow: column;
+  }
+}
+
+a:hover {
+  box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+}
 
 @media (min-width: 670px) {
   .title {
