sanya ya popravil

--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -27,8 +27,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<div class="form-search">
 			  <form class="form-inline my-2 my-lg-0">
-				<input class="input-form" type="search" placeholder="что ищем?" aria-label="search">
-				<button class="seacrh-btn btn-outline-success my-2 my-sm-0" type="submit">поехали!</button>
+				<input class="input-search" type="search" placeholder="что ищем?" aria-label="search">
+				<button class="seacrh-btn search-btn-outline-success" type="submit">поехали!</button>
 			  </form>
 		  	</div>
             <ul class="navbar-nav mr-auto"></ul>
