--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -19,6 +19,25 @@ body {
 }
 
 .search-btn {
+	width: 5%;
     position: sticky;
-    
+}
+
+.input-search {
+	border-color: black;
+	border-right: none;
+	position: sticky;
+	width: 85%;
+	outline: none;
+}
+
+.search-btn-outline-success {
+	color: #6882C8;
+	border-color: #000000;
+}
+
+.search-btn-outline-success:hover {
+	color: #fff;
+	background-color: #949494;
+	border-color: #000000;
 }
