--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" >
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">
             <img th:src="@{/images/logo.png}"  src="../static/images/logo_word.png" width="auto" height="25" class="d-inline-block fa-align-center image-logo" alt=""/>
@@ -34,7 +34,7 @@
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
 				<li class="nav-item active"> 
-					<a class="nav-link sel" href="#">мужчинам <span class="sr-only">(current)</span></a>
+					<a class="nav-link sel" href="#">мужчинам<span class="sr-only">(current)</span></a>
 				</li>
   	        	<li class="nav-item active"> 
 					<a class="nav-link sel" href="#">женщинам</a>
