--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 body {
     font-family: ST-Tablichka;	
-	background-image: url(../images/logo_grid.png);
+	background-image: url(../images/logo_grid_4_test.png);
 	-webkit-background-size: cover;
   	-moz-background-size: cover;
   	-o-background-size: cover;
