--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -27,17 +27,17 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<div class="form-search">
 			  <form class="form-inline my-2 my-lg-0">
-				<input class="input-search" type="search" placeholder="что ищем?" aria-label="search">
-				<button class="seacrh-btn search-btn-outline-success" type="submit">поехали!</button>
+				<input class="input-search" type="search" placeholder="Что ищем?" aria-label="search">
+				<button class="seacrh-btn search-btn-outline-success" type="submit">Поиск</button>
 			  </form>
 		  	</div>
             <ul class="navbar-nav mr-auto"></ul>
             <ul class="navbar-nav">
 				<li class="nav-item active"> 
-					<a class="nav-link sel" href="#">мужчинам<span class="sr-only">(current)</span></a>
+					<a class="nav-link sel" href="#">Мужчинам<span class="sr-only">(current)</span></a>
 				</li>
   	        	<li class="nav-item active"> 
-					<a class="nav-link sel" href="#">женщинам</a>
+					<a class="nav-link sel" href="#">Женщинам</a>
 				</li>
                 <li class="nav-item active">
                     <a class="nav-link" th:href="@{/}" href="#">home</a>
@@ -62,11 +62,39 @@
         </div>
     </div>
 </nav>
-
-
-
+<div class="container">
+  <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="carousel-item active"> <img class="d-block mx-auto" th:src="@{/images/c1.png}"  src="../static/images/c1.png" alt="First slide">
+        <div class="carousel-caption">
+          <h5>First slide Heading</h5>
+          <p>First slide Caption</p>
+        </div>
+      </div>
+      <div class="carousel-item"> <img class="d-block mx-auto" th:src="@{/images/c2.png}"  src="../static/images/c2.png" alt="Second slide">
+        <div class="carousel-caption">
+          <h5>Second slide Heading</h5>
+          <p>Second slide Caption</p>
+        </div>
+      </div>
+      <div class="carousel-item"> <img class="d-block mx-auto" th:src="@{/images/c3.png}"  src="../static/images/c3.png" alt="Third slide">
+        <div class="carousel-caption">
+          <h5>Third slide Heading</h5>
+          <p>Third slide Caption</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> 
+	</div>
+</div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="../static/js/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
