--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -72,20 +72,20 @@
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active"> <img class="d-block mx-auto" th:src="@{/images/c1.png}"  src="../static/images/c1.png" alt="First slide">
         <div class="carousel-caption">
-          <h5>First slide Heading</h5>
-          <p>First slide Caption</p>
+          <h5 class="heading-carousel">Саша молодец</h5>
+          <p class="p_carousel">Саша хорош</p>
         </div>
       </div>
       <div class="carousel-item"> <img class="d-block mx-auto" th:src="@{/images/c2.png}"  src="../static/images/c2.png" alt="Second slide">
         <div class="carousel-caption">
-          <h5>Second slide Heading</h5>
-          <p>Second slide Caption</p>
+          <h5 class="heading-carousel">Саша не молодец</h5>
+          <p class="p_carousel">Саша не хорош</p>
         </div>
       </div>
       <div class="carousel-item"> <img class="d-block mx-auto" th:src="@{/images/c3.png}"  src="../static/images/c3.png" alt="Third slide">
         <div class="carousel-caption">
-          <h5>Third slide Heading</h5>
-          <p>Third slide Caption</p>
+          <h5 class="heading-carousel">Саша красава</h5>
+          <p class="p_carousel">ДАЛБИ ДАЛБИ</p>
         </div>
       </div>
     </div>
