--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -13,84 +13,66 @@
     
 </head>
 <body>
-
-
+<div class="container-fluid">
 <nav class="navbar navbar-expand-lg">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img th:src="@{/images/logo_word.png}"  src="../static/images/logo_word.png" width="auto" height="25" class="d-inline-block fa-align-center image-logo" alt=""/>
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<div class="form-search">
-			  <form class="form-inline my-2 my-lg-0">
-				<input class="input-search" type="search" placeholder="Что ищем?" aria-label="search">
-				<button class="seacrh-btn search-btn-outline-success" type="submit">Поиск</button>
-			  </form>
-		  	</div>
-            <ul class="navbar-nav mr-auto"></ul>
-            <ul class="navbar-nav">
-				<li class="nav-item active"> 
-					<a class="nav-link sel" href="#">Мужчинам<span class="sr-only">(current)</span></a>
-				</li>
-  	        	<li class="nav-item active"> 
-					<a class="nav-link sel" href="#">Женщинам</a>
-				</li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/}" href="#">home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/shop}" href="#">shop</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">logout</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" th:href="@{/cart}" href="#">cart</a>
-                </li>
-                <li class="nav-item active">
-                    <span class="nav-link" th:text="${cartCount}">0</span>
-                </li>
-            </ul>
-
+    <div class="container-fluid"> <a class="navbar-brand" href="#"> <img th:src="@{/images/logo_word.png}"  src="../static/images/logo_word.png" width="auto" height="25" class="d-inline-block fa-align-center image-logo" alt=""/> </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="form-search">
+          <form class="form-inline my-2 my-lg-0">
+            <input class="input-search" type="search" placeholder="Что ищем?" aria-label="search">
+            <button class="seacrh-btn search-btn-outline-success" type="submit">Поиск</button>
+          </form>
         </div>
-    </div>
-</nav>
-<div class="container">
-  <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox">
-      <div class="carousel-item active"> <img class="d-block mx-auto" th:src="@{/images/c1.png}"  src="../static/images/c1.png" alt="First slide">
-        <div class="carousel-caption">
-          <h5 class="heading-carousel">Саша молодец</h5>
-          <p class="p_carousel">Саша хорош</p>
-        </div>
-      </div>
-      <div class="carousel-item"> <img class="d-block mx-auto" th:src="@{/images/c2.png}"  src="../static/images/c2.png" alt="Second slide">
-        <div class="carousel-caption">
-          <h5 class="heading-carousel">Саша не молодец</h5>
-          <p class="p_carousel">Саша не хорош</p>
-        </div>
-      </div>
-      <div class="carousel-item"> <img class="d-block mx-auto" th:src="@{/images/c3.png}"  src="../static/images/c3.png" alt="Third slide">
-        <div class="carousel-caption">
-          <h5 class="heading-carousel">Саша красава</h5>
-          <p class="p_carousel">ДАЛБИ ДАЛБИ</p>
-        </div>
+        <ul class="navbar-nav mr-auto">
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item active"> <a class="nav-link sel" href="#">Мужчинам<span class="sr-only">(current)</span></a> </li>
+          <li class="nav-item active"> <a class="nav-link sel" href="#">Женщинам</a> </li>
+          <li class="nav-item active"> <a class="nav-link" th:href="@{/}" href="#">home</a> </li>
+          <li class="nav-item active"> <a class="nav-link" th:href="@{/shop}" href="#">shop</a> </li>
+          <li class="nav-item active"> <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/login}" href="#">login</a> </li>
+          <li class="nav-item active"> <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/logout}" href="#">logout</a> </li>
+          <li class="nav-item active"> <a class="nav-link" th:href="@{/cart}" href="#">cart</a> </li>
+          <li class="nav-item active"> <span class="nav-link" th:text="${cartCount}">0</span> </li>
+        </ul>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a> 
-	</div>
+  </nav>
+  <div class="container">
+    <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel" style="background-color: grey">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active"> <img class="d-block mx-auto" id="c1_big_img" th:src="@{/images/c1_big.png}"  src="../static/images/c1_big.png" alt="First slide">
+          <div class="carousel-caption">
+            <h5 class="heading-carousel">Саша молодец</h5>
+            <p class="p_carousel">Саша хорош</p>
+          </div>
+        </div>
+        <div class="carousel-item"> <img class="center-block d-block mx-auto" id="c2_big_img" th:src="@{/images/c2_big.png}"  src="../static/images/c2_big.png" alt="Second slide">
+          <div class="carousel-caption">
+            <h5 class="heading-carousel">Саша не молодец</h5>
+            <p class="p_carousel">Саша не хорош</p>
+          </div>
+        </div>
+        <div class="carousel-item"> <img class="d-block mx-auto" id="c3_big_img" th:src="@{/images/c3_big.png}"  src="../static/images/c3_big.png" alt="Third slide">
+          <div class="carousel-caption">
+            <h5 class="heading-carousel">Саша красава</h5>
+            <p class="p_carousel">ДАЛБИ ДАЛБИ</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev"> <span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span></a> <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next"> <span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span></a></div>
+  </div>
+<!--
+  <div class="container-back style-flat">
+	  <div class="flip"></div>
+  </div>
+-->
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
