--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -23,6 +23,11 @@ body {
 	font-size: 20px;
 }
 
+#categories_tag {
+	background: #FFFFFF;
+	text-align: center;
+}
+
 .form-search {
 	margin: 0 auto;
 	width: 100%;
