--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -15,6 +15,10 @@ body {
     font-family: "Tektur Medium";
 }
 
+.navbar_dropdown_icon {
+	width: 40px;
+}
+
 .navbar {
 	position: relative;
 	z-index: 10;
