--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <div class="container-fluid">
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid"> <a class="navbar-brand" href="#"> <img th:src="@{/images/logo_word.png}"  src="../static/images/logo_word.png" width="auto" height="25" class="d-inline-block fa-align-center image-logo" alt=""/> </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"><img class='navbar_dropdown_icon' src='../static/images/asd.png'></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <div class="form-search">
           <form class="form-inline my-2 my-lg-0">
