--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -19,6 +19,8 @@ body {
 	width: 40px;
 }
 
+
+
 .navbar {
 	position: relative;
 	z-index: 10;
@@ -29,6 +31,8 @@ body {
 	height: 90px;
 	font-size: 20px;
 }
+
+.datatable-body-cell { overflow-x: visible !important; }
 
 #categories_tag {
 	background: #FFFFFF;
@@ -80,6 +84,14 @@ body {
 	border-color: #000000;
 }
 
+@media (max-width:991px) {
+	.navbar-nav {
+		padding-left: 10px;
+		background-color:#fff;
+		border: 3px solid black;
+	}
+}
+
 .image-logo {
 	background: #000000;
 }
@@ -102,7 +114,7 @@ body {
 .carousel {
 	position: relative;
 	margin: auto;
-	z-index: 10;
+	z-index: 5;
 	border: 8px solid black;
 }
 
