--- a/major/src/main/resources/templates/shop.html
+++ b/major/src/main/resources/templates/shop.html
@@ -54,17 +54,19 @@
             </ul>
         </div>
         <div class="col-sm-9">
-            <div class="card" style="margin-top: 20px" th:each="product : ${products}">
+            <div class="card" style="margin-top: 20px" th:each="product : ${newProducts}">
                 <div style="padding-top: 20px" class="row no-gutters">
                     <div class="col-sm-5 d-flex justify-content-center">
-                        <img class="" height="150px" width="150px" th:src="@{${'/productImages/' + product.imageName}}" th:alt="${product.name}">
+                        <img class="" height="220px" width="150px" th:src="@{${product.get('pictures').getAsJsonObject().get('logoPicture').getAsString()}}">
                     </div>
                     <div class="col-sm-7 d-flex justify-content-center">
                         <div class="card-body">
-                            <h5 class="card-title" th:text="${product.name}"></h5>
-                            <h4>$ <span th:text="${product.price}"></span></h4>
-                            <p th:text="${product.description}" >Description of the product</p>
-                            <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.id})}" class="btn btn-primary">View Product</a>
+                            <h5 class="card-title" th:text="${product.get('name').getAsString()}">Name</h5>
+                            <h4>$ <span th:text="${product.get('price')}"></span></h4>
+                            <p th:text="${product.get('brand').getAsString()}" >Brand</p>
+                            <p th:text="${product.get('categoryName').getAsString()}" >Sex</p>
+                            <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.get('code')})}" class="btn btn-warning">View Product</a>
+                            <a href="#" th:href="@{${product.get('linkPdp').getAsString()}}" class="btn btn-primary">Go to shop</a>
                         </div>
                     </div>
                 </div>
