--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -140,8 +140,24 @@ body {
     } 
 }
 
+.card-body-new {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.25rem;
+}
 
+.login-form  {
+	background: #FFFFFF;
+}
 
+.receipt {
+	background: #FFFFFF;
+}
+
+.products {
+	background: #FFFFFF;
+}
 /*
 
 .container-back {
