--- a/major/src/main/resources/templates/cart.html
+++ b/major/src/main/resources/templates/cart.html
@@ -55,12 +55,29 @@
                         <div class="card-body">
 
                             <h5 class="mb-4">Cart (<span th:text="${cartCount}">2</span> items)</h5>
+<!--                            <div class="card" style="margin-top: 20px" th:each="product : ${cart}">-->
+<!--                                <div style="padding-top: 20px" class="row no-gutters">-->
+<!--                                    <div class="col-sm-5 d-flex justify-content-center">-->
+<!--                                        <img class="" height="220px" width="150px" th:src="@{${product.get('pictures').getAsJsonObject().get('logoPicture').getAsString()}}">-->
+<!--                                    </div>-->
+<!--                                    <div class="col-sm-7 d-flex justify-content-center">-->
+<!--                                        <div class="card-body">-->
+<!--                                            <h5 class="card-title" th:text="${product.get('name').getAsString()}">Name</h5>-->
+<!--                                            <h4>$ <span th:text="${product.get('price')}"></span></h4>-->
+<!--                                            <p th:text="${product.get('brand').getAsString()}" >Brand</p>-->
+<!--                                            <p th:text="${product.get('categoryName').getAsString()}" >Sex</p>-->
+<!--                                            <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.get('code').getAsString()})}" class="btn btn-warning">View Product</a>-->
+<!--                                            <a href="#" th:href="@{${product.get('linkPdp').getAsString()}}" class="btn btn-primary">Go to shop</a>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
 
-                            <div class="row mb-4" th:each="item, iStat : ${cart}">
+                            <div class="row mb-4" th:each="product : ${cart}">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
                                     <div class="mb-3 mb-md-0">
                                         <img class="img-fluid w-100"
-                                             th:src="@{${'/productImages/' + item.imageName}}"
+                                             th:src="@{${product.get('pictures').getAsJsonObject().get('logoPicture').getAsString()}}"
                                              src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12a.jpg" alt="Sample">
 
                                     </div>
@@ -69,28 +86,28 @@
                                     <div>
                                         <div class="d-flex justify-content-between">
                                             <div>
-                                                <h5 th:text="${item.name}">Blue denim shirt</h5>
-                                                <p class="mb-3 text-uppercase small">Weight: <span th:text="${item.weight}"></span> grams</p>
-<!--                                                <p class="mb-2 text-uppercase small">Category: <span th:text="${item.category.name}"></span></p>-->
-
+                                                <h5 th:text="${product.get('name').getAsString()}">Blue denim shirt</h5>
+                                                <p class="mb-2 text-uppercase small">Category: <span th:text="${product.get('categoryName').getAsString()}"></span></p>
+                                                <p class="mb-2 text-uppercase small">Brand: <span th:text="${product.get('brand').getAsString()}"></span></p>
                                             </div>
 
                                         </div>
                                         <div class="mt-5 d-flex justify-content-between align-items-center">
                                             <div>
-                                                <a href="#!" th:href="@{/cart/removeItem/{index}(index=${iStat.index})}"  type="button" class="card-link-secondary small text-uppercase mr-3"><i
+                                                <a href="#!" th:href="@{/cart/removeItem/{id}(id=${product.get('code').getAsString()})}"  type="button" class="card-link-secondary small text-uppercase mr-3"><i
                                                         class="fas fa-trash-alt mr-1"></i> Remove item </a>
+                                                <a href="#" th:href="@{/shop/viewproduct/{id}(id=${product.get('code').getAsString()})}" class="btn btn-warning">View Product</a>
+                                                <a href="#" th:href="@{${product.get('linkPdp').getAsString()}}" class="btn btn-primary">Go to shop</a>
 
                                             </div>
-                                            <p class="mb-0"><span><strong>₹<span th:text="${item.price}"></span></strong></span></p>
+                                            <p class="mb-0"><span><strong>$<span th:text="${product.get('price')}"></span></strong></span></p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <hr class="mb-4">
 
-                            <p class="text-primary mb-0"><i class="fas fa-info-circle mr-1"></i> Do not delay the purchase, adding
-                                items to your cart does not mean booking them.</p>
+                            <p class="text-primary mb-0"><i class="fas fa-info-circle mr-1"></i> Any tip.</p>
 
                         </div>
                     </div>
@@ -113,11 +130,10 @@
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                                     Amount Payable
-                                    <span>₹<span th:text="${total}"></span></span>
+                                    <span>$<span th:text="${total}"></span></span>
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                    Shipping
-                                    <span>Gratis</span>
+                                    SOsi HUY
                                 </li>
                                 <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                                     <div>
@@ -126,12 +142,12 @@
                                             <p class="mb-0">(including VAT)</p>
                                         </strong>
                                     </div>
-                                    <span><strong>₹<span th:text="${total}"></span></strong></span>
+                                    <span><strong>$<span th:text="${total}"></span></strong></span>
                                 </li>
                             </ul>
 
-                            <a th:href="@{/checkout}" h class="btn btn-primary btn-block waves-effect waves-light">go to
-                                checkout</a>
+<!--                            <a th:href="@{/checkout}" h class="btn btn-primary btn-block waves-effect waves-light">go to-->
+<!--                                checkout</a>-->
 
                         </div>
                     </div>
@@ -143,7 +159,7 @@
 
                             <a class="dark-grey-text d-flex justify-content-between" data-toggle="collapse" href="#collapseExample"
                                aria-expanded="false" aria-controls="collapseExample">
-                                Add a discount code (optional)
+                                Опциональная хуня (optional)
                                 <span><i class="fas fa-chevron-down pt-1"></i></span>
                             </a>
 
@@ -151,7 +167,7 @@
                                 <div class="mt-3">
                                     <div class="md-form md-outline mb-0">
                                         <input type="text" id="discount-code" class="form-control font-weight-light"
-                                               placeholder="Enter discount code">
+                                               placeholder="Enter some">
                                     </div>
                                 </div>
                             </div>
