--- a/major/src/main/resources/templates/viewProduct.html
+++ b/major/src/main/resources/templates/viewProduct.html
@@ -55,7 +55,7 @@
   </nav>
 	
 	 
-<div class="container mt-5">
+<div class="container mt-5 products">
     <div class="row">
         <div class="col-sm-5 d-flex justify-content-center">
             <img class="" height="600px" width="400px" th:src="@{${product.get('pictures').getAsJsonObject().get('normalPicture').getAsString()}}">
