--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -22,6 +22,7 @@ body {
 
 
 .navbar {
+	border: solid white 3px;
 	position: relative;
 	z-index: 10;
 	position: relative;
@@ -115,7 +116,7 @@ body {
 	position: relative;
 	margin: auto;
 	z-index: 5;
-	border: 8px solid black;
+	border: 3px solid white;
 }
 
 
@@ -157,6 +158,45 @@ body {
 
 .products {
 	background: #FFFFFF;
+}
+
+.site-footer {
+	border-top: solid white 4px;
+	list-style-type: none;
+	position: absolute;
+ 	bottom: 0;
+    margin-top: 1%;
+    display: flex;
+    height: 8vh;
+    width: 100%;
+    background-color: #000000;
+    line-height: 1.3;
+}
+
+
+.foot {
+	display: inline-grid;
+	grid-auto-flow: row;
+	grid-gap: 24px;
+	justify-items: center;
+	margin: auto;
+}
+
+.footer-text {
+	color: white;
+	text-decoration: none;
+	box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+}
+
+.footer-text:hover {
+	color: #DBDBDB;
+	box-shadow: inset 0 -1.2em 0 hsla(0, 0%, 100%, 0.4);
+}
+
+@media (min-width: 500px) {
+  foot {
+    grid-auto-flow: column;
+  }
 }
 /*
 
