--- a/major/src/main/resources/templates/lookamaker.html
+++ b/major/src/main/resources/templates/lookamaker.html
@@ -45,12 +45,24 @@
   </div>
 -->
 </div>
+<!--
 	<div class="equal_rows">
 		<div class="row justify-content-center">
 			  <div class="col-xl-6 look_preview_left">Здесь располагается содержимое</div>
 			  <div class="col-xl-6 look_preview_right">Здесь располагается содержимое</div>
 		</div>
 	</div>
+-->
+	
+	
+	<div class="create-look-page">
+		<div class="items-placeholder">
+		
+		</div>
+		
+	</div>
+	
+	
 	<div class="site-footer">
 	  <ul class="foot list-unstyled">
 		<li><a class="footer-text" href="https://github.com/Dmitryq/Agregator">GitHub</a></li>
