--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -25,9 +25,9 @@
 			</div>
 			<div class="navbar">
 				<nav class="w-75 navbar-expand-lg">
-					<div class="container-fluid">
+					<div class="container-fluid nav_mobile">
 						<a class="navbar-brand" th:href="@{/}" href="#"> <img th:src="@{/images/logo_word.png}"  src="../static/images/logo_word.png" width="auto" height="25" class="d-inline-block fa-align-center image-logo" alt=""/> </a>
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"><img class="navbar_dropdown_icon" src="../static/images/asd.png"></span> </button>
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"><img class="navbar_dropdown_icon" src="../static/images/menu.png"></span> </button>
 						<div class="collapse navbar-collapse collapsed_nav" id="navbarSupportedContent">
 							<div class="form-search">
 								<form class="form-inline">
@@ -50,20 +50,16 @@
 					</div>
 				</nav>
 			</div>
-		<div class="container promobox">
-			<img class="promo_img" src="../static/images/logo_grid_4_tes12t.png">		
-			<img class="promo_img" src="../static/images/logo_grid_4_test.png">		
-			<img class="promo_img" src="../static/images/32.png">	
-			<img class="promo_img" src="../static/images/logo_grid_4_tes12t.png">
-<!--
-			<div class="container promo_prompt" onmouseover="chbg('white')" onmouseout="chbg('black')">
--->
-				<h1>
+		<div class="container promo_box">
+			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_tes12t.png">
+			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_test.png">
+			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/32.png">
+			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_tes12t.png">
+			<div class="container promo_prompt">
+				<h1 onmouseover="chbg('white')" onmouseout="chbg('black')">
 					<a class="nav-link promo_nav" th:href="@{/shop/Ladies/-1}" href="#">Одежда на каждый день</a>
 				</h1>
-<!--
 			</div>
--->
 		</div>
 		<div class="site-footer">
 			<ul class="foot list-unstyled">
@@ -75,5 +71,6 @@
 		<script src="../static/js/popper.min.js"></script>
 		<script src="../static/js/kostili.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+		</div>
 	</body>
 </html>
