--- a/major/src/main/resources/templates/lookamaker.html
+++ b/major/src/main/resources/templates/lookamaker.html
@@ -55,11 +55,13 @@
 -->
 	
 	
-	<div class="create-look-page">
+	<div class="create-look-page align-items-lg-center">
 		<div class="items-placeholder">
-		
+		asd
 		</div>
-		
+		<div class="info-placeholder">
+		fsda
+		</div>
 	</div>
 	
 	
