--- a/major/src/main/resources/templates/lookamaker.html
+++ b/major/src/main/resources/templates/lookamaker.html
@@ -62,10 +62,15 @@
 		</div>
 		<div class="info-placeholder">
 			<div id="look-label">Название</div>
-			<input id="label-text" type="text" placeholder="Введите название">
-			<input id="label-subm" type="submit">
-			<div id="look-desc">Информация</div>
-			<input id="desc-text" type="text" placeholder="Введите описание">
+			<div class="look-inputs">
+				<input id="look-text" type="text" placeholder="Введите название" align="left">
+				<input id="label-subm" type="submit" align="right">
+			</div>
+			<div class="look-inputs">
+				<div id="look-desc">Информация</div>
+				<textarea id="desc-text" placeholder="Введите описание" name="desc-text" cols="40" rows="5"></textarea>
+			</div>
+<!--			<input id="desc-text" type="text" placeholder="Введите описание">-->
 		</div>
 	</div>
 		<div class="site-footer">
