--- a/major/src/main/resources/static/css/style.css
+++ b/major/src/main/resources/static/css/style.css
@@ -314,14 +314,19 @@ body {
 
 .items-placeholder {
 	vertical-align: top;
-	width: 160px;
+	width: 250px;
 	background-color: #272727;
 	display: inline-block;
 	border: 3px solid white;
 	color: white;
 }
 
+#look_add_info {
+	font-size: 25px;
+}
+
 .info-placeholder {
+	font-size: 25px;
 	vertical-align: top;
 	height: 50vh;
 	width: 40%;
@@ -344,10 +349,47 @@ body {
 }
 
 #desc-text {
+	font-size: 20px;
 	width: 90%;
 }
 
+#label-text {
+	font-size: 20px;
+}
+
+#label-subm {
+
+	vertical-align: middle;
+	margin: 0 auto;
+	float: right;
+	font-size: 20px;	
+	display: inline-block;
+}
+
+#look-label {
+	margin-bottom: 10px;
+	text-align: left;
+	padding-left: 30px;
+}
+
+#look-desc {
+	text-align: left;
+	margin: 10px 0;
+}
+
+#look-text {
+	font-size: 20px;
+	align-self: left;
+}
+
+.look-inputs {
+	font-size: 20px;
+	width: 90%;
+	display: inline-block;
+	text-align: left;
+}
 /*
+
 
 
 .container-back {
