--- a/major/src/main/resources/templates/index.html
+++ b/major/src/main/resources/templates/index.html
@@ -52,10 +52,10 @@
 				</nav>
 			</div>
 		<div class="container promo_box">
-			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_tes12t.png">
-			<a th:href="@{/shop/Ladies/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_test.png">
-			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/32.png">
-			<a th:href="@{/shop/Ladies/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_tes12t.png">
+			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_tes12t.png"></a>
+			<a th:href="@{/shop/Ladies/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_test.png"></a>
+			<a th:href="@{/shop/men_all/-1}" href="#"><img class="promo_img" src="../static/images/32.png"></a>
+			<a th:href="@{/shop/Ladies/-1}" href="#"><img class="promo_img" src="../static/images/logo_grid_4_tes12t.png"></a>
 			<div class="container promo_prompt" id="fir_link">
 				<h1 onmouseover="chbg_1link('white')" onmouseout="chbg_1link('black')">
 					<a class="nav-link promo_nav" th:href="@{/shop/Ladies/-1}" href="#">Одежда на каждый день</a>
